started getting images

--- a/app/views/info/info/complementary_therapy.html.erb
+++ b/app/views/info/info/complementary_therapy.html.erb
@@ -24,12 +24,12 @@
 		<div id='links_2'>
 			<%= link_to(info_supplements_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>Supplements</span></span>
-				<%= image_tag("woman_apple_small_2.jpg") %>
+				<%= image_tag("multiple_pills_small_2.jpg") %>
 				<span class='link_text'>Which supplements can help my blood pressure? Find out here...</span>
 			<% end %>
 			<%= link_to(info_acupuncture_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>Acupuncture</span></span>
-				<%= image_tag("relaxation_small.jpg") %>
+				<%= image_tag("acupuncture_small.jpg") %>
 				<span class='link_text'>How can acupuncture help my blood pressure? Find out here...</span>
 			<% end %>
 			
