--- a/app/views/info/info/lifestyle_options.html.erb
+++ b/app/views/info/info/lifestyle_options.html.erb
@@ -25,17 +25,17 @@
 		<div id='links'>
 			<%= link_to(info_diet_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>Food and drink</span></span>
-				<%= image_tag("woman_apple_small_2.jpg") %>
+				<%= image_tag("woman_apple_small_3.jpg") %>
 				<span class='link_text'>What can I eat to help my blood pressure? What about the things that I drink? Find out here...</span>
 			<% end %>
 			<%= link_to(info_exercise_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>Exercise</span></span>
-				<%= image_tag("relaxation_small.jpg") %>
+				<%= image_tag("man_running_small_3.jpg") %>
 				<span class='link_text'>How does exercise help my blood pressure? How much exercise do I need to do? Find out here...</span>
 			<% end %>
 			<%= link_to(info_smoking_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>Smoking</span></span>
-				<%= image_tag("tablets_small.jpg") %>
+				<%= image_tag("ashtray_small.jpg") %>
 				<span class='link_text'>How does smoking affect my blood pressure? Find out here...</span>
 			<% end %>
 			
