--- a/app/views/info/info/medication.html.erb
+++ b/app/views/info/info/medication.html.erb
@@ -25,17 +25,17 @@
 		<div id='links'>
 			<%= link_to(info_what_are_the_best_medication_options_for_me_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>What are the best medication options for me?</span></span>
-				<%= image_tag("woman_apple_small_2.jpg") %>
+				<%= image_tag("tablets_small.jpg") %>
 				<span class='link_text'>What different types of medication are available? How do I know which is best for me? Find out here...</span>
 			<% end %>
 			<%= link_to(info_how_can_i_reduce_the_risk_of_side_effects_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>How can I reduce the risk of side effects?</span></span>
-				<%= image_tag("relaxation_small.jpg") %>
+				<%= image_tag("risk_v_reward_small.jpg") %>
 				<span class='link_text'>How does using this website reduce the risk of side effects? Find out here...</span>
 			<% end %>
 			<%= link_to(info_why_do_i_need_to_take_more_than_one_medication_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>Why do I need to take more than one medication?</span></span>
-				<%= image_tag("tablets_small.jpg") %>
+				<%= image_tag("multiple_pills_small_2.jpg") %>
 				<span class='link_text'>Why isn’t one medication enough? Can’t I just take a higher dose? Find out here...</span>
 			<% end %>
 			
