--- a/app/views/info/info/treating_blood_pressure.html.erb
+++ b/app/views/info/info/treating_blood_pressure.html.erb
@@ -28,12 +28,12 @@
 		<div id='links'>
 			<%= link_to(info_lifestyle_options_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>Lifestyle options</span></span>
-				<%= image_tag("woman_apple_small_2.jpg") %>
+				<%= image_tag("woman_apple_small_3.jpg") %>
 				<span class='link_text'>What can I change to help my blood pressure? What should I eat? What about exercise? Find out here...</span>
 			<% end %>
 			<%= link_to(info_complementary_therapy_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>Complementary therapy</span></span>
-				<%= image_tag("relaxation_small.jpg") %>
+				<%= image_tag("acupuncture_small.jpg") %>
 				<span class='link_text'>Which natural supplements can help my blood pressure? What about acupuncture? Find out here...</span>
 			<% end %>
 			<%= link_to(info_medication_path, :class => 'info_link') do %>
