--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -26,17 +26,17 @@
 		<div id='links'>
 			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>How do I measure my blood pressure?</span></span>
-				<%= image_tag("heart_bp_monitor_small.jpg") %>
+				<%= image_tag("woman_taking_bp_small.jpg") %>
 				<span class='link_text'>One of the best ways is to use a home blood pressure machine. A few simple steps will give you an accurate measure of your blood pressure in the convenience of your own home. Read more here…</span>
 			<% end %>
 			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>When should I measure my blood pressure?</span></span>
-				<%= image_tag("woman_taking_bp_small.jpg") %>
+				<%= image_tag("diary_small.jpg") %>
 				<span class='link_text'>You should measure your blood pressure each morning and evening for at least 4 days. Each time you should take two readings a minute apart. Read more here…</span>
 			<% end %>
 			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>How do I choose a blood pressure machine?</span></span>
-				<%= image_tag("tablets_small.jpg") %>
+				<%= image_tag("blood_pressure_machine_small.jpg") %>
 				<span class='link_text'>What is the best blood pressure machine? What is the difference between them? Are they all accurate? Read more about choosing a blood pressure machine here…</span>
 			<% end %>
 			
