--- a/app/views/info/info/what_is_blood_pressure.html.erb
+++ b/app/views/info/info/what_is_blood_pressure.html.erb
@@ -26,17 +26,17 @@
 		<div id='links'>
 			<%= link_to(info_what_am_i_measuring_path, :class => 'info_link') do %>
 				<span id='link_title_1'><span id='link_title_content_1'>What am I measuring?</span></span>
-				<%= image_tag("woman_apple_small_2.jpg") %>
+				<%= image_tag("woman_taking_bp_small.jpg") %>
 				<span class='link_text'>Both numbers are important; they measure the pressure in your arteries at the highest and lowest points of your pulse. Find out more here...</span>
 			<% end %>
 			<%= link_to(info_what_do_the_numbers_mean_path, :class => 'info_link') do %>
 				<span id='link_title_2'><span id='link_title_content_2'>What do the numbers mean?</span></span>
-				<%= image_tag("relaxation_small.jpg") %>
+				<%= image_tag("number_23_small.jpg") %>
 				<span class='link_text'>Your blood pressure is a measure of the pressure in your arteries. This gives you an idea of how hard your heart is having to work to pump blood around your body - find out more here…</span>
 			<% end %>
 			<%= link_to(info_what_is_the_normal_range_for_me_path, :class => 'info_link') do %>
 				<span id='link_title_3'><span id='link_title_content_3'>What is the normal range?</span></span>
-				<%= image_tag("tablets_small.jpg") %>
+				<%= image_tag("tick_small.jpg") %>
 				<span class='link_text'>The definition of normal blood pressure depends on whether you are on treatment or have any other medical conditions. Find out more here…</span>
 			<% end %>
 			
