--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta name="description" content="Is your blood pressure too high? Blood pressure treatment at home. No more time waiting at the doctor's." />
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
   
   <!-- Google Analytics code -->
   <script>
