--- a/app/views/info/info/home_page.html.erb
+++ b/app/views/info/info/home_page.html.erb
@@ -23,19 +23,19 @@
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_what_is_blood_pressure_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>What is blood pressure?</span></span>
+			<%= link_to(info_what_is_blood_pressure_path, :class => 'info_link1') do %>
 				<%= image_tag("heart_bp_monitor_small.jpg") %>
+				<span id='link_title'>What is blood pressure?</span>
 				<span class='link_text'>What am I measuring? What do the numbers mean? What is the normal range for me? Find out more here…</span>
 			<% end %>
-			<%= link_to(info_measuring_blood_pressure_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>Measuring blood pressure</span></span>
+			<%= link_to(info_measuring_blood_pressure_path, :class => 'info_link2') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
+				<span id='link_title'>Measuring blood pressure</span>
 				<span class='link_text'>How do I measure my blood pressure? When should I measure it? How do I choose a blood pressure machine? Find out more here…</span>
 			<% end %>
-			<%= link_to(info_treating_blood_pressure_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>Treating blood pressure</span></span>
+			<%= link_to(info_treating_blood_pressure_path, :class => 'info_link1') do %>
 				<%= image_tag("tablets_small.jpg") %>
+				<span id='link_title'>Treating blood pressure</span>
 				<span class='link_text'>How should I change my diet? Which supplements help? What is the best medication for me? Find out more here...</span>
 			<% end %>
 			
