--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -16,7 +16,7 @@
           font-size:2.5em;
           color: #033076;
           font-weight: normal;
-          line-height: 30px;
+          line-height: 35px;
           //margin: 20px 0px 0px 0px;
         }
       
@@ -64,13 +64,13 @@
           font-weight: normal;
           //padding: 20px 0px 0px 0px;
           margin: 0px;
-          line-height: 25px;
+          line-height: 28px;
         }
         
         p {
-          font-size:1em;
+          font-size:1.1em;
           color: #000000;
-          margin: 15px 0px 0px 25px;
+          margin: 15px 5px 0px 25px;
         }
         
         #input_bp {
@@ -124,7 +124,7 @@
         p {
           font-size:1.1em;
           color: #000000;
-          margin: 15px 0px 0px 25px;
+          margin: 15px 5px 0px 25px;
         }
       }
         
@@ -191,6 +191,7 @@
             color: #606060;
             display: block;
             padding-left: 10px;
+            padding-right: 10px;
             //display: none;
           }
         }
