--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -2,8 +2,9 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>FREE advice from UK GPs.</p>
-			<p id='second'>Online. Anytime.</p>
+			<p id='first'>Measure your blood pressure</p>
+			<p id='second'>Sign up to get free advice from UK GPs</p>
+			<p id='third'>Get prescriptions delivered to your door</p>
 			<div class='clear_float'></div>
 		</div>
 	</div>
@@ -20,29 +21,30 @@
 		<div id='strip3_content'>
 			<h2>Measuring blood pressure</h2>
 			<h3>How can HomeBloodPressure.co.uk help me monitor my blood pressure?</h3>
-			<p>You’ll be able to follow simple instructions on how to measure your blood pressure. You’ll be able to easily record your blood pressure measurements. You’ll get reminders of when you need to next check your blood pressure.</p>
+			<p>You’ll be able to follow simple instructions on how to measure your blood pressure. You’ll be able to easily record your blood pressure measurements. You’ll get reminders of when you need to next check your blood pressure. We’ll do all the hard work for you, by working out a running average of your blood pressure readings.
+			<% if !user_signed_in? %>
+				<%= link_to 'Find out more.', static_pages_features_path %>
+			<% end %>
+			</p>
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>How do I measure my blood pressure?</span></span>
+			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span class='link_text'>One of the best ways is to use a home blood pressure machine. A few simple steps will give you an accurate measure of your blood pressure in the convenience of your own home. Read more here…</span>
+				<span id='link_title'>How do I measure my blood pressure?</span>
+				<span class='link_text'>One of the best ways is to use a home blood pressure machine… <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>When should I measure my blood pressure?</span></span>
+			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link2') do %>
 				<%= image_tag("diary_small.jpg") %>
-				<span class='link_text'>You should measure your blood pressure each morning and evening for at least 4 days. Each time you should take two readings a minute apart. Read more here…</span>
+				<span id='link_title'>When should I measure my blood pressure?</span>
+				<span class='link_text'>You should measure your blood pressure each morning and evening… <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>How do I choose a blood pressure machine?</span></span>
+			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link1') do %>
 				<%= image_tag("blood_pressure_machine_small.jpg") %>
-				<span class='link_text'>What is the best blood pressure machine? What is the difference between them? Are they all accurate? Read more about choosing a blood pressure machine here…</span>
+				<span id='link_title'>How do I choose a blood pressure machine?</span>
+				<span class='link_text'>You don’t need to spend much money to get a blood pressure machine… <span class='more'>find out more.</span></span>
 			<% end %>
-			
-			<div class='clear_float'>
-			</div>
-		
+
 		</div>
 	
 	</div>
