--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -10,35 +10,46 @@
         //margin-left: auto;
         //margin-right: auto;
         //padding-bottom: 30px;
-        padding: 50px 0px 20px 5%;   
+        padding: 50px 5% 20px 5%;   
       
         h1 {
           font-size:2.5em;
           color: #033076;
           font-weight: normal;
           line-height: 35px;
-          //margin: 20px 0px 0px 0px;
+          margin: 0px 0px 10px 0px;
         }
       
-        #first, #second {
+        #first, #second, #third {
           font-family: arial, verdana, helvetica, sans-serif;
-          font-size: 1.35em;
+          font-size: 1.2em;
           //font-weight: normal;
           //margin: 0px 0px 0px 30px;
-          float: left;
-          margin-top: 20px;
+          //float: left;
+          //margin-top: 20px;
+          margin-left: 3%;
+        }
+        
+        @media (min-width: 1000px) {
+          #first, #second, #third {
+            float: left;
+          }
         }
       
         #first {
-          color: #1464F6;
+          color: #0844A4;
           //margin-top: 16px;
-          margin-left: 30px;
+          //margin-left: 30px;
         }
       
         #second {
-          color: #3D8AF7;
+          color: #1464F6;
           //margin-top: 8px;
-          margin-left:10px;
+          //margin-left:10px;
+        }
+        
+        #third {
+          color: #3D8AF7;
         }
       }
     }
@@ -70,7 +81,7 @@
         p {
           font-size:1.1em;
           color: #000000;
-          margin: 15px 5px 0px 25px;
+          margin: 15px 5px 0px 3%;
         }
         
         #input_bp {
@@ -97,6 +108,7 @@
       width: 100%;
       background-color: #D4E3FC;
       margin-bottom: 30px;
+      padding-bottom: 20px;
       
       #strip3_content {
         width: 90%;
@@ -109,22 +121,37 @@
           font-size:1.8em;
           color: #033076;
           font-weight: normal;
-          padding: 20px 0px 0px 0px;
+          line-height: 25px;
+          padding: 20px 0px 10px 0px;
           margin: 0px;
         }
         
         h3 {
-          font-size:1.2em;
-          color: #0844a4;
+          font-size:1.3em;
+          color: #033076;
           font-weight: normal;
-          padding: 20px 0px 0px 25px;
+          padding: 10px 0px 0px 3%;
           margin: 0px;
         }
         
         p {
           font-size:1.1em;
           color: #000000;
-          margin: 15px 5px 0px 25px;
+          margin: 10px 5px 30px 3%;
+        }
+        
+        #any_questions {
+          width: 180px;
+          margin: 30px auto 0px auto;
+          
+          a {
+            color: #000000;
+            font-size:1.2em;
+            
+            span {
+              font-size:0.8em;
+            }
+          }
         }
       }
         
@@ -140,7 +167,7 @@
           //float: left;
           //width: 150px;
           min-height: 120px;
-          margin: 40px 10px 0px 10px;
+          margin: 0px 0px 40px 0px;
         }
         
         a.info_link_vertical {
@@ -164,7 +191,7 @@
             color:#000000;
             background-color: #ffffff;
               
-            #link_title {
+            #link_title, .link_text .more {
               text-decoration: underline;
             }
           }
@@ -192,7 +219,10 @@
             display: block;
             padding-left: 10px;
             padding-right: 10px;
-            //display: none;
+            
+            .more {
+              color: #0000FF;
+            }
           }
         }
         
