--- a/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
@@ -2,25 +2,29 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>FREE advice from UK GPs.</p>
-			<p id='second'>Online. Anytime.</p>
+			<p id='first'>Measure your blood pressure</p>
+			<p id='second'>Sign up to get free advice from UK GPs</p>
+			<p id='third'>Get prescriptions delivered to your door</p>
 			<div class='clear_float'></div>
 		</div>
 	</div>
 	
-	<% if !user_signed_in? %>
-	<div id='strip2'>
-		<div id='strip2_content'>
-			<%= render 'info/is_my_bp_too_high' %>
-		</div>
-	</div>
-	<% end %>
-	
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>When should I measure my blood pressure?</h2>
-			<p>Your blood pressure varies from hour to hour so one or two readings can be misleading. Doctors recommend taking a set of readings over at least 4 days to get a reliable measurement. By using HomeBloodPressure.co.uk you will be guided through taking your readings step by step so you can be sure you’ve got an accurate measurement.</p>
-			<p>You should measure your blood pressure each morning and evening, and on each occasion you should take two readings one minute apart. Our website will help you keep track of this with email reminders and clear instructions.</p>
+			<p>Follow our instructions to know when to take your readings at home. Then sign up to our free service to receive automatic reminders to measure your blood pressure. Let us do the hard work and work out your average blood pressure. Then use our service to find out what you need to do next.
+			<% if !user_signed_in? %>
+				<%= link_to 'Find out more.', static_pages_features_path %>
+			<% end %>
+			</p>
+			<p>Your blood pressure varies from hour to hour so one or two readings can be misleading. Doctors recommend taking a set of readings over at least 4 days to get a reliable measurement. By using HomeBloodPressure.co.uk you will be guided through taking your readings step by step so you can be sure you’ve got an accurate measurement. By taking the average of a lot of readings HomeBloodPressure.co.uk is able to give you a more reliable measure of your blood pressure than any single reading.</p>
+			<p>You should measure your blood pressure each morning and evening. On each occasion you should take two readings one minute apart. Our website will help you keep track of this with email reminders and clear instructions. Then we’ll do the hard work for you, and work out what your average blood pressure is.</p>
+			<div id='any_questions'>
+				<%= link_to(new_message_path, :class => 'button4') do %>
+					Any questions?
+					<span>Contact us here</span>
+				<% end %>
+			</div>
 		</div>
 	
 	</div>
