css for mobiles about there

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -9,6 +9,7 @@
           font-size:1.2em;
           color: #032F76;
           margin-top: 15px;
+          margin-bottom: 0px;
         }
           
         .qualifications {
@@ -20,15 +21,15 @@
           
         .gmc_no {
           font-size: 0.8em;
-          margin: 0px 0px 0px 25px;
+          margin: 0px 0px 0px 3%;
         }
     
         .content {
-          margin: 0px 0px 20px 25px;
+          margin: 0px 0px 20px 3%;
         }
         
         .indent {
-          margin-left: 50px;
+          margin-left: 6%;
         }
       }
     }
