--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -17,24 +17,27 @@
 			
 			<p>Please use the form below to contact us with any queries. However, be aware that although we frequently check for messages, this service is not able to provide any emergency medical advice. If you are feeling seriously unwell then please seek medical attention with your local doctor and do not await a response from us.</p>
 
-			<div id='nav_form'>
+			<div id='contact_form'>
 				<%= form_for @message do |f| %>
 					<table>
 						<tr>
-							<td><%= f.label :name %></td>
+							<td class='label'><%= f.label :name %></td>
 							<td><%= f.text_field :name %></td>
-						</tr>
-						<tr>
-							<td><%= f.label :email %></td>
-							<td><%= f.text_field :email %></td>
-						</tr>
-						<tr>
-							<td><%= f.label :content, "Message" %></td>
-							<td><%= f.text_area :content, :rows => 5 %></td>
-						</tr>
-						<tr>
 							<td></td>
+						</tr>
+						<tr>
+							<td class='label'><%= f.label :email %></td>
+							<td><%= f.text_field :email %></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class='label'><%= f.label :content, "Message" %></td>
+							<td colspan='2'><%= f.text_area :content, :rows => 5 %></td>
+						</tr>
+						<tr>
+							<td class='label'></td>
 							<td><%= f.submit "Send Message", :class => 'button4' %></td>
+							<td></td>
 						</tr>
 					</table>
   
