--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -82,6 +82,10 @@
           font-size:1.1em;
           color: #000000;
           margin: 15px 5px 0px 3%;
+          
+          span {
+            font-weight: bold;
+          }
         }
         
         #input_bp {
@@ -256,16 +260,29 @@
         margin-right: auto;
         padding-bottom: 30px;
         
+        #welcome {
+          
+          p {
+            font-size: 1.1em;
+            color: #000000;
+            padding: 15px 0px 0px 3%;
+            
+            .bigger {
+              font-size: 1.3em;
+            }
+          }
+        }
+        
         #text {
           width: auto;
         
           p {
-            font-size:1em;
+            font-size:1.1em;
             color: #000000;
-            padding: 15px 0px 0px 25px;
+            padding: 15px 0px 0px 3%;
             
             .bigger {
-              font-size: 1.2em;
+              font-size: 1.3em;
             }
             
             .bold {
@@ -274,28 +291,37 @@
           }
             
           #feature_1 {
-            font-size:1.2em;
-            color: #0C59CF;
-            padding: 15px 0px 0px 25px;
+            font-size:1.3em;
+            color: #0844A4;
+            padding: 15px 0px 0px 3%;
           }
           
           #feature_2 {
-            font-size:1.2em;
-            color: #0844A4;
-            padding: 15px 0px 0px 25px;
+            font-size:1.3em;
+            color: #033076;
+            padding: 15px 0px 0px 3%;
+          }
+        }
+        
+        @media (min-width: 450px) {
+          #graphic {
+            float: right;
+            padding-right: 10px;
+            padding-left: 4%;
           }
         }
         
         #graphic {
-          float: right;
+          //float: right;
           width: 200px;
-          margin: 25px 25px 0px 0px;
+          margin: 0px auto 0px auto;
+          padding-top: 25px;
           
           #average_bp {
             position: relative;
             width: 100%;
             height: 300px;
-            margin-left:25px;
+            //margin-left:25px;
             border-style:solid;
             border-width:2px;
             border-color:#033076;
@@ -354,12 +380,12 @@
                 border-radius:7px;
                 background-color:#ffffff;
                 color:#000000;
-                font-size: 12pt;
+                font-size: 1.4em;
                 text-align: center;
                 padding: 7px;
         
                 #mmHg {
-                  font-size: 10pt;
+                  font-size: 0.7em;
                   text-align: center;
                 }
               }
@@ -370,7 +396,7 @@
             width: 100%;
             height: 145px;
             margin-top: 20px;
-            margin-left: 25px;
+            //margin-left: 25px;
             margin-bottom: 25px;
             border-style:solid;
             border-width:2px;
@@ -382,7 +408,7 @@
         
             p {
               margin: 5px 10px 5px 10px;
-              font-size: 8pt;
+              font-size: 0.78em;
               text-align: center;
               line-height: 14px;
             }
@@ -400,7 +426,7 @@
                 height: 25px;
                 border-right: 1px solid #ffffff;
                 text-align: center;
-                font-size: 14pt;
+                font-size: 1.4em;
                 color: #aedd94;
                 padding-top: 6px;
               }
@@ -430,11 +456,12 @@
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 30px;
+        padding-top: 30px;
         
         p {
-          font-size:1em;
+          font-size:1.1em;
           color: #000000;
-          padding: 15px 0px 0px 25px;
+          padding: 15px 0px 0px 3%;
           
           .bold {
             font-weight: bold;
@@ -442,19 +469,18 @@
         }
         
         #return_notice {
-          font-size:1.2em;
-          color: #0844A4;
+          font-size:1.3em;
+          color: #033076;
           padding: 25px 0px 0px 0px;
           max-width: 500px;
-          margin: 0px 3% 0px 10%;
-          text-align: center;
+          margin: 0px 10% 0px 10%;
+          //text-align: center;
         }
         
         #yes_no_buttons {
           width: 180px;
-          margin-left: auto;
-          margin-right: auto;
-          padding: 20px 200px 0px 0px;
+          margin-left: 10%;
+          padding: 20px 0px 0px 0px;
         }
         
         #no_button, #yes_button {
@@ -462,18 +488,13 @@
           width: 80px;
         }
         
-        #yes_button {
-          margin-left: 20px; 
+        #no_button {
+          margin: 0px 20px 10px 0px; 
         }
         
         #next_button, #restart_button {
           width: 80px;
-          margin-left: auto;
-          margin-right: auto;
-          padding: 20px 200px 0px 0px;
-        }
-        
-        #restart_button {
+          margin-left: 10%;
           padding: 20px 0px 0px 0px;
         }
       }
@@ -487,27 +508,44 @@
     
     
     #nav_form {
-      padding: 20px 0px 0px 6%;
       max-width: 400px;
+    }
+    
+    #contact_form {
+      
+      table {
+        width: 90%;
+      }
+    }
+    
+    #nav_form, #contact_form {
+      padding: 0px 0px 0px 3%;
       
       h2 {
-        font-size:1.6em;
+        font-size:1.8em;
         color: #0844A4;
-        padding: 0px 0px 15px 0px;
+        padding: 0px 0px 25px 0px;
       }
       
       table {
-        margin-left: 10%;
+        margin-left: 5%;
       }
       
       td {
-        padding: 0px 20px 5px 0px;
+        padding: 0px 20px 10px 0px;
         vertical-align: top;
+        font-size: 1.1em;
+        line-height: 18px;
       }
+      
+      .label {
+          width: 80px;
+        }
       
       #tac_msg {
         
         td {
+          padding-top: 10px;
           font-size: 0.9em;
         }
       }
@@ -519,20 +557,17 @@
       }
       
       #sign_up_button {
-        padding: 10px 0px 20px 20%;
+        width: 220px;
+        margin: 10px auto 20px auto;
       }
       
       #sign_in_button {
-        padding: 10px 0px 20px 150px;
+        width: 100px;
+        margin: 10px auto 20px auto;
       }
         
-      #forgot_pwd_button {
-        padding: 10px 0px 20px 50px;
-        font-size: 10pt;
-      }
-        
-      #change_pwd_button {
-        padding: 10px 0px 20px 90px;
+      #forgot_pwd_button, #change_pwd_button {
+        padding: 10px 0px 20px 10%;
         font-size: 10pt;
       }
       
@@ -549,13 +584,13 @@
       }
       
       #message_content, #admin_message_content {
-        width: 450px;
+        width: 100%;
         font-size: 1em;
       }
       
-      #send_button {
-        margin: 20px 0px 20px 200px;
-      }
+      //#send_button {
+        //margin: 20px 0px 20px 200px;
+      //}
     }
   }
 }
