--- a/app/views/account/home.html.erb
+++ b/app/views/account/home.html.erb
@@ -33,7 +33,7 @@
 				<p><%= average_bp_message(@average_sysbp, @average_diabp) %></p>
 			<% end %>
 	
-			<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this <span class='bold'><%= time_left %></span>. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from this site.</p>
+			<p>...However, to get a more accurate picture of what your blood pressure is like you need to take more readings like this <span class='bold'><%= time_left %></span>. This is because your blood pressure will vary from hour to hour, so one or two readings can be misleading. By taking more readings, you will get more accurate advice from us.</p>
 			
 			<% if !user_signed_in? %>
 				<p id='feature_1'>You can be guided through this process by us... we'll make it easy.</p>
