--- a/app/views/account/readings_due.html.erb
+++ b/app/views/account/readings_due.html.erb
@@ -6,6 +6,16 @@
 	<div id='strip4'>
 		<div id='strip4_content'>
 			
+			<div id='welcome'>
+				<% if @bp_entry_details[:bp_given] == 'yes' %>
+					<p>Thank you for entering your recent blood pressure readings.</p>
+				<% elsif @bp_entry_details[:bp_given] == 'skipped' %>
+					<p>OK, don't worry. Missing the odd reading isn't the end of the world!</p>
+				<% else %>
+					<p class='bigger'>Welcome back <%= current_user.email %></p>
+				<% end %>
+			</div>
+			
 			<div id='graphic'>
 				<% if !@average_sysbp.nil? %>
 					<div id='average_bp'>
@@ -13,18 +23,15 @@
 					</div>
 					<div id='reading_counter'>
 						<%= render :partial => 'reading_counter' %>
-					</div>	
+					</div>
 				<% end %>
 			</div>
 			
 			<div id='text'>
-				<% if @bp_entry_details[:bp_given] == 'yes' %>
-					<p>Thank you for entering your recent blood pressure readings.</p>
-				<% elsif @bp_entry_details[:bp_given] == 'skipped' %>
-					<p>OK. Ideally try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
-				<% else %>
-					<p><span class='bigger'>Welcome back <%= current_user.email %></span></p>
-					<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure you'll get reliable advice. That way you will know whether your blood pressure really is too high.</p>
+				<% if @bp_entry_details[:bp_given] == 'skipped' %>
+					<p>Ideally try to take a pair of blood pressure readings every morning and evening for 4 days. Don't worry if you miss the occasional reading, but the set must span no more than a week, otherwise you will need to restart. This ensures that you get an accurate and up to date measure of your blood pressure so you will know if it is too high.</p>
+				<% elsif @bp_entry_details[:bp_given] == nil %>
+					<p>It's time to record some more blood pressure readings. Taking a set of readings over several days will give you an accurate measure of your blood pressure. From an accurate measure we'll give you reliable advice. That way you will know whether your blood pressure really is too high.</p>
 				<% end %>
 			</div>
 
@@ -42,7 +49,8 @@
 					<%= link_to 'Next', new_current_bp_path(@bp_entry_details), :class => 'button1 button2' %>
 				</div>
 			<% else %>
-				<p>Do you have a pair of blood pressure readings from <span><%= old_bp_datetime_text %></span> that you need to enter into your account?</p>
+				<p>Do you have a pair of blood pressure readings from <span class='bold'><%= old_bp_datetime_text %></span> that you need to enter into your account?
+				
 				<div id='yes_no_buttons'>
 					<div id='no_button'>
 						<%= link_to 'No', account_is_bp_set_completable_path(@bp_entry_details), method: :post, :class => 'button1 button7' %>
@@ -52,6 +60,9 @@
 					</div>
 					<div class='clear_float'></div>
 				</div>
+					
+				</p>
+				
 			<% end %>
 		</div>
 	</div>
