--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,9 @@
 			<div class='topmenucontent'>
 				<%= link_to 'Advice', info_home_page_path %>
 			</div>
+			<div class='topmenucontent'>
+				<%= link_to 'Contact', new_message_path %>
+			</div>
 			<% else %>
 			<div class='topmenucontent'>
 				<%= link_to 'Home', info_home_page_path %>
