--- a/app/views/info/info/how_do_i_choose_a_blood_pressure_machine.html.erb
+++ b/app/views/info/info/how_do_i_choose_a_blood_pressure_machine.html.erb
@@ -23,8 +23,8 @@
 			<p>The <%= link_to 'British Hypertension Society', 'http://www.bhsoc.org//index.php?cID=246', :target => '_blank' %> checks the accuracy of monitors and has a list of approved monitors.</p>
 			<div id='any_questions'>
 				<%= link_to(new_message_path, :class => 'button4') do %>
-					Any questions?
-					<span>Contact us here</span>
+					Any questions?<br />
+					<span>Ask us here</span>
 				<% end %>
 			</div>
 		</div>
