--- a/app/views/info/info/how_do_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/how_do_i_measure_my_blood_pressure.html.erb
@@ -30,8 +30,8 @@
 			<p>Wait a minute and then repeat the process. Taking two readings will give a more accurate measure of your blood pressure. The site will prompt you to do this.</p>
 			<div id='any_questions'>
 				<%= link_to(new_message_path, :class => 'button4') do %>
-					Any questions?
-					<span>Contact us here</span>
+					Any questions?<br />
+					<span>Ask us here</span>
 				<% end %>
 			</div>
 		</div>
