--- a/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
@@ -21,8 +21,8 @@
 			<p>You should measure your blood pressure each morning and evening. On each occasion you should take two readings one minute apart. Our website will help you keep track of this with email reminders and clear instructions. Then we’ll do the hard work for you, and work out what your average blood pressure is.</p>
 			<div id='any_questions'>
 				<%= link_to(new_message_path, :class => 'button4') do %>
-					Any questions?
-					<span>Contact us here</span>
+					Any questions?<br />
+					<span>Ask us here</span>
 				<% end %>
 			</div>
 		</div>
